--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    hej
+    <div class="container">
+      <input type="text" class="addText" placeholder="task..." />
+      <button class="addBtn" onclick="addElement()">
+        <img
+          src="http://picaflor-azul.com/images/plus-circle1.png 
+          "
+          alt=""
+        />
+      </button>
+      <div class="list"></div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
