--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <input type="text" class="addText" placeholder="task..." />
-      <button class="addBtn" onclick="addElement()">
+      <button class="addBtn">
         <img
           src="http://picaflor-azul.com/images/plus-circle1.png 
           "
@@ -20,6 +20,6 @@
       <div class="list"></div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script4.js"></script>
   </body>
 </html>
